[gd_scene load_steps=4 format=3 uid="uid://d35d600ekoi2p"]

[ext_resource type="Script" uid="uid://6nwbs7p6j2re" path="res://scenes/meteor.gd" id="1_pxso2"]
[ext_resource type="AudioStream" uid="uid://cjr84nrwea1qj" path="res://kenney_space-shooter-redux/Bonus/sfx_twoTone.ogg" id="2_pxso2"]

[sub_resource type="CircleShape2D" id="CircleShape2D_pxso2"]
radius = 52.1728

[node name="Meteor" type="Area2D"]
collision_layer = 2
collision_mask = 9
script = ExtResource("1_pxso2")

[node name="MeteorAvatar" type="Sprite2D" parent="."]

[node name="MeteorCollisionShape" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_pxso2")

[node name="MeteorDestroySound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("2_pxso2")

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
